--- a/app/src/main/res/drawable/bottom_sheet_style.xml
+++ b/app/src/main/res/drawable/bottom_sheet_style.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/myWhite"/>
             <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
         </shape>
     </item>
