--- a/app/src/main/res/drawable/edit_text_style_2.xml
+++ b/app/src/main/res/drawable/edit_text_style_2.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
+    <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <corners android:radius="8dp" />
-            <solid android:color="@color/koin_exchange_edt" />
+            <corners android:radius="16dp" />
+            <solid android:color="@color/light_black" />
         </shape>
     </item>
 </selector>
