--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -86,53 +86,19 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">
 
-        <TextView
-            android:id="@+id/balanceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="0"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView2"
-            app:layout_constraintEnd_toStartOf="@+id/elasticImageView2"
-            app:layout_constraintTop_toTopOf="@+id/elasticImageView2" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="@string/sum"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="@string/balance"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <EditText
             android:id="@+id/editTextCount"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_margin="32dp"
+            android:layout_margin="24dp"
             android:background="@drawable/edit_text_style_2"
+            android:elevation="4dp"
             android:hint="@string/data_count"
             android:inputType="number"
             android:maxLength="5"
@@ -142,70 +108,20 @@
             android:textColorHint="@color/hint_color"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.085" />
 
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/elasticImageView"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_coin"
-            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
-
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/elasticImageView2"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_coin"
-            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/elasticImageView" />
-
-        <TextView
-            android:id="@+id/priceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="0"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView"
-            app:layout_constraintEnd_toStartOf="@+id/elasticImageView"
-            app:layout_constraintTop_toTopOf="@+id/elasticImageView" />
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/start"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="32dp"
-            android:background="@drawable/clear_item"
-            android:text="@string/exchange"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            app:layout_constraintVertical_bias="0.0" />
-
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/progressView"
             style="@style/SpinKitView.Large.FadingCircle"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:layout_centerHorizontal="true"
             android:indeterminate="true"
             app:SpinKit_Color="@color/to_right_color"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -214,6 +130,123 @@
             app:layout_constraintTop_toBottomOf="@+id/start"
             app:layout_constraintVertical_bias="1.0" />
 
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_margin="24dp"
+            android:background="@drawable/item_style"
+            android:elevation="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/balanceLayout"
+            app:layout_constraintVertical_bias="0.0">
+
+            <TextView
+                android:id="@+id/priceTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="24dp"
+                android:text="0"
+                android:textColor="@color/to_right_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:thumb="@drawable/switch_thumb"
+                app:track="@drawable/thumb_track" />
+
+            <ImageView
+                android:id="@+id/img2"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:src="@drawable/ic_coin" />
+
+            <TextView
+                android:id="@+id/sumTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="0dp"
+                android:layout_toEndOf="@+id/img2"
+                android:text="@string/sum"
+                android:textColor="@color/to_right_color"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/balanceLayout"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_margin="24dp"
+            android:background="@drawable/item_style"
+            android:elevation="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextCount">
+
+            <TextView
+                android:id="@+id/balanceTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="24dp"
+                android:text="24"
+                android:textColor="@color/to_right_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:thumb="@drawable/switch_thumb"
+                app:track="@drawable/thumb_track" />
+
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:src="@drawable/ic_coin" />
+
+            <TextView
+                android:id="@+id/tokenValueTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="0dp"
+                android:layout_toEndOf="@+id/img"
+                android:text="@string/balance"
+                android:textColor="@color/to_right_color"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/start"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="24dp"
+            android:background="@drawable/clear_item"
+            android:text="@string/exchange"
+            app:layout_constraintEnd_toEndOf="@+id/relativeLayout1"
+            app:layout_constraintStart_toStartOf="@+id/relativeLayout1"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
