--- a/app/src/main/res/layout/fragment_tokens.xml
+++ b/app/src/main/res/layout/fragment_tokens.xml
@@ -9,101 +9,135 @@
     android:focusable="true"
     tools:context=".presentation.fragments.TokensFragment">
 
-
-    <ImageView
-        android:id="@+id/backBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="12dp"
-        android:src="@drawable/ic_baseline_chevron_left_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/to_right_color" />
-
-
-    <com.skydoves.elasticviews.ElasticImageView
-        android:id="@+id/infoBtn"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_margin="12dp"
-        android:src="@drawable/ic_baseline_help_outline_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/to_right_color" />
-
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:text="Делись с друзьями своими \nмонетами"
-        android:textColor="@color/to_right_color"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="52dp"
-        android:orientation="vertical"
-        android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
-        <EditText
-            android:id="@+id/idEditText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:layout_margin="8dp"
-            android:background="@drawable/edit_text_style_2"
-            android:elevation="4dp"
-            android:hint="@string/id_token"
-            android:padding="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.8" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/backBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/ic_baseline_chevron_left_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/to_right_color" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/checkTokenBtn"
-            android:layout_width="120dp"
-            android:layout_height="52dp"
-            android:layout_gravity="end"
-            android:layout_margin="16dp"
-            android:background="@drawable/clear_item"
-            android:elevation="4dp"
-            android:src="@drawable/ic_baseline_autorenew_24"
-            android:text="@string/check"
-            android:tint="@color/to_right_color"
-            app:imageView_duration="300"
-            app:layout_constraintEnd_toEndOf="@+id/idEditText"
-            app:layout_constraintTop_toBottomOf="@+id/idEditText" />
+                <com.skydoves.elasticviews.ElasticImageView
+                    android:id="@+id/infoBtn"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/ic_baseline_help_outline_24"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/to_right_color" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/createTokenBtn"
-            android:layout_width="120dp"
-            android:layout_height="52dp"
-            android:layout_gravity="end"
-            android:layout_margin="16dp"
-            android:background="@drawable/clear_item"
-            android:text="@string/create"
-            app:layout_constraintStart_toStartOf="@+id/idEditText"
-            app:layout_constraintTop_toBottomOf="@+id/idEditText" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="72dp"
+                    android:text="Делись с друзьями своими \nмонетами"
+                    android:textColor="@color/to_right_color"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/token_after_activation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:orientation="vertical"
+                    android:padding="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                    <EditText
+                        android:id="@+id/idEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="62dp"
+                        android:layout_margin="8dp"
+                        android:background="@drawable/edit_text_style_2"
+                        android:elevation="4dp"
+                        android:hint="@string/id_token"
+                        android:padding="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_percent="0.1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.8" />
+
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/checkTokenBtn"
+                        android:layout_width="120dp"
+                        android:layout_height="52dp"
+                        android:layout_gravity="end"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/clear_item"
+                        android:elevation="4dp"
+                        android:src="@drawable/ic_baseline_autorenew_24"
+                        android:text="@string/check"
+                        android:tint="@color/to_right_color"
+                        app:imageView_duration="300"
+                        app:layout_constraintEnd_toEndOf="@+id/idEditText"
+                        app:layout_constraintTop_toBottomOf="@+id/idEditText" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/createTokenBtn"
+                        android:layout_width="120dp"
+                        android:layout_height="52dp"
+                        android:layout_gravity="end"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/clear_item"
+                        android:text="@string/create"
+                        app:layout_constraintStart_toStartOf="@+id/idEditText"
+                        app:layout_constraintTop_toBottomOf="@+id/idEditText" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/token_after_activation"
+                    app:layout_constraintStart_toStartOf="@+id/textView3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:overScrollMode="never"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
