--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -26,15 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="500dp">
 
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="12dp"
-                    android:src="@drawable/ic_baseline_chevron_left_24"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/to_right_color" />
-
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/chartView"
                     android:layout_width="match_parent"
@@ -44,6 +35,17 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/backBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="12dp"
+                    android:src="@drawable/ic_baseline_chevron_left_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/to_right_color" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
