--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -115,6 +115,7 @@
                     android:layout_height="40dp"
                     android:layout_marginEnd="14dp"
                     android:padding="4dp"
+                    app:imageView_duration="200"
                     android:elevation="4dp"
                     android:background="@drawable/clear_item"
                     android:src="@drawable/ic_baseline_delete_outline_24"
