--- a/app/src/main/res/layout/fragment_tokens.xml
+++ b/app/src/main/res/layout/fragment_tokens.xml
@@ -63,7 +63,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout3"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="350dp"
                     android:orientation="vertical"
                     android:padding="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView3">
@@ -111,6 +111,21 @@
                         android:text="@string/create"
                         app:layout_constraintStart_toStartOf="@+id/idEditText"
                         app:layout_constraintTop_toBottomOf="@+id/idEditText" />
+
+                    <com.github.ybq.android.spinkit.SpinKitView
+                        android:id="@+id/progressView"
+                        style="@style/SpinKitView.Large.FadingCircle"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="18dp"
+                        android:indeterminate="true"
+                        android:visibility="invisible"
+                        app:SpinKit_Color="@color/to_right_color"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/checkTokenBtn"
+                        app:layout_constraintStart_toStartOf="@+id/createTokenBtn"
+                        app:layout_constraintTop_toBottomOf="@+id/checkTokenBtn" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
