--- a/app/src/main/res/layout/fragment_meditation.xml
+++ b/app/src/main/res/layout/fragment_meditation.xml
@@ -12,59 +12,37 @@
     android:orientation="horizontal"
     tools:context=".presentation.fragments.MeditationFragment">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal">
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <TextView
-            android:id="@+id/minuteTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/droid_sans_mono"
-            android:text="18"
-            android:textColor="@color/to_right_color"
-            android:textSize="80sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=":"
-            android:textColor="@color/to_right_color"
-            android:textSize="80sp" />
-
-        <TextView
-            android:id="@+id/secondTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/droid_sans_mono"
-            android:text="29"
-            android:textColor="@color/to_right_color"
-            android:textSize="80sp" />
-    </LinearLayout>
-
-
-    <com.scwang.wave.MultiWaveHeader
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:scaleY="-1"
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressView"
+        style="@style/SpinKitView.Large.FadingCircle"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:SpinKit_Color="@color/to_right_color"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:mwhCloseColor="#3F51B5"
-        app:mwhStartColor="#877171"
-        app:mwhVelocity="5" />
-
-    <com.scwang.wave.MultiWaveHeader
-        android:id="@+id/multiWaveHeader"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:mwhCloseColor="#3F51B5"
-        app:mwhStartColor="#877171"
-        app:mwhVelocity="5" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!--    <com.scwang.wave.MultiWaveHeader-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="140dp"-->
+    <!--        android:scaleY="-1"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:mwhCloseColor="#3F51B5"-->
+    <!--        app:mwhStartColor="#877171"-->
+    <!--        app:mwhVelocity="5" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
