--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/music_container"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:layout_margin="8dp"
     android:background="@drawable/clear_item"
-    android:elevation="3dp">
+    android:clickable="true"
+    android:elevation="3dp"
+    android:focusable="true">
 
-
-    <com.skydoves.elasticviews.ElasticImageView
-        android:id="@+id/playBtn"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_baseline_play_circle_outline_24"
-        android:tint="@color/to_right_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/musicName"
