--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,6 +19,7 @@
     <color name="search_color">#24303E</color>
     <color name="empty_box_color">#BAB7B7</color>
     <color name="core_progress_color">#DD5E7D</color>
+    <color name="time_color">#4E5F73</color>
 
     <color name="progress_text_color">#DD5E7D</color>
 
